# aoc2022

./: README.md
day01/: CMakeLists.txt
day01/src/: Example.cpp  Example.hpp  Solution.cpp  Solution.hpp  main.cpp
day01/tests/: example_tests.cpp  solution_tests.cpp  tests.cpp
day02/: README.md
day02/src/: Solution.cpp  Solution.hpp  main.cpp
day02/tests/: solution_tests.cpp
day03/scripts/: test.sh
day03/src/: Solution.cpp  Solution.hpp  main.cpp
day03/tests/: solution_tests.cpp
day04/scripts/: run.sh
day04/src/: Solution.cpp  Solution.hpp  main.cpp
day04/tests/: solution_tests.cpp
